--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,9 @@
 2002-03-05  Tom Tromey  <tromey@redhat.com>
 
+	* java/lang/natPosixProcess.cc (fail): Removed.
+	(startProcess): Simplified error-handling.  Preserve
+	LD_LIBRARY_PATH across exec.
+
 	* jni.cc (_Jv_LookupJNIMethod): Throw UnsatisfiedLinkError, not
 	AbstractMethodError.
 
