* java/lang/natPosixProcess.cc (fail): Removed. 	(startProcess): Simplified error-handling.  Preserve 	LD_LIBRARY_PATH across exec.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50343 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/libjava/ChangeLog
+++ b/gcc-3_1-branch/libjava/ChangeLog
@@ -1,5 +1,11 @@
 2002-03-05  Tom Tromey  <tromey@redhat.com>
 
+	* java/lang/natPosixProcess.cc (fail): Removed.
+	(startProcess): Simplified error-handling.  Preserve
+	LD_LIBRARY_PATH across exec.
+
+2002-03-05  Tom Tromey  <tromey@redhat.com>
+
 	* jni.cc (_Jv_LookupJNIMethod): Throw UnsatisfiedLinkError, not
 	AbstractMethodError.
 
