--- a/gcc-3_1-branch/libjava/ChangeLog
+++ b/gcc-3_1-branch/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-06  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* java/awt/MediaTracker.java: Implemented.
+	* Makefile.am: Add MediaTracker.
+	* Makefile.in: Rebuilt.
+
 2002-03-05  Tom Tromey  <tromey@redhat.com>
 
 	* java/lang/natPosixProcess.cc (fail): Removed.
