--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-06  Jakub Jelinek  <jakub@redhat.com>
+
+	* ssa-ccp.c (ssa_ccp_substitute_constants): Backout 2002-03-05
+	patch.
+
 Wed Mar  6 11:28:19 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* predict.c (estimate_bb_frequencies): Do not reload the
