--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+Wed Mar  6 18:14:43 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* cfgcleanup.c (mentions_nonequal_regs): New function.
+	(thread_jump): Use it.
+	* toplev.c (rest_of_compilation): Run jump threading after
+	liveness.
+
 2002-03-06  Jakub Jelinek  <jakub@redhat.com>
 
 	* ssa-ccp.c (ssa_ccp_substitute_constants): Backout 2002-03-05
