--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-06  Phil Edwards  <pme@gcc.gnu.org>
+
+	* version.c:  Fix misplaced leading blanks on first line.
+
 Wed Mar  6 19:08:03 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* cfgrtl.c (verify_flow_info): Accept RESX as EH edge source.
