--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-06  Phil Edwards  <pme@gcc.gnu.org>
+
+	* version.c:  Fix misplaced leading blanks on first line.
+
 2002-03-03  Zack Weinberg  <zack@codesourcery.com>
 
 	* com.c, target.h: Remove all #ifndef REAL_ARITHMETIC
