--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -8,6 +8,9 @@ Wed Mar  6 20:32:09 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 Wed Mar  6 12:27:10 2002  Jeffrey A Law  (law@redhat.com)
 
+	* ssa-ccp.c (ssa_fast_dce): Update the DF def-use chains
+	after completing fast dead code elimination.
+
 	* m68k.h (CONST_COSTS): Lower cost of 0.0 when used inside a
 	COMPARE operator.
 	
