--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-06  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* reload1.c (reload): Unshare all rtl after reload is done.
+
 2002-03-06  Jakub Jelinek  <jakub@redhat.com>
 
 	* ssa-ccp.c (ssa_ccp_substitute_constants): Backout 2002-03-05
