* include/config.h.in: Rebuilt. 	* configure: Rebuilt. 	* Makefile.in: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50381 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-06  Tom Tromey  <tromey@redhat.com>
+
+	* include/config.h.in: Rebuilt.
+	* configure: Rebuilt.
+	* Makefile.in: Rebuilt.
+
 2002-03-06  Adam Megacz  <adam@xwt.org>
 
         * java/io/FileDescriptor.java: Initialize in/out/err in init().
