* include/config.h.in: Rebuilt. 	* configure: Rebuilt. 	* Makefile.in: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50382 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/libjava/ChangeLog
+++ b/gcc-3_1-branch/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-06  Tom Tromey  <tromey@redhat.com>
+
+	* include/config.h.in: Rebuilt.
+	* configure: Rebuilt.
+	* Makefile.in: Rebuilt.
+
 2002-03-06  Eric Blake  <ebb9@email.byu.edu>
 
 	* scripts/unicode-decomp.pl: Move from chartables.pl, and remove
