--- a/gcc-3_1-branch/libjava/ChangeLog
+++ b/gcc-3_1-branch/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-28  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* java/net/natPlainSocketImpl.cc (_Jv_recv): Removed.
+	(read): Call recv() directly, not _Jv_recv().
+
 2002-03-06  Tom Tromey  <tromey@redhat.com>
 
 	* include/config.h.in: Rebuilt.
