--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-07  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* java/net/natPlainSocketImpl.cc (_Jv_recv): Removed.
+	(read): Call recv() directly, not _Jv_recv().
+
 2002-03-06  Tom Tromey  <tromey@redhat.com>
 
 	* java/io/natFileDescriptorEcos.cc (init): Don't use
