--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-03-07  Aldy Hernandez  <aldyh@redhat.com>
+
+        * doc/invoke.texi: Add documentation for -mabi=no-altivec.
+
+        * config/rs6000/rs6000.c (rs6000_parse_abi_options): Add
+        -mabi=no-altivec
+        (alt_reg_names): Remove % for vrsave.
+
 2002-03-06  Richard Henderson  <rth@redhat.com>
 
 	* genemit.c (gen_exp): New argument used.  Invoke copy_rtx
