2002-03-07  Aldy Hernandez  <aldyh@redhat.com>
        * doc/invoke.texi: Add documentation for -mabi=no-altivec.

        * config/rs6000/rs6000.c (rs6000_parse_abi_options): Add
        -mabi=no-altivec
        (alt_reg_names): Remove % for vrsave.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50394 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-03-07  Aldy Hernandez  <aldyh@redhat.com>
+
+        * doc/invoke.texi: Add documentation for -mabi=no-altivec.
+
+        * config/rs6000/rs6000.c (rs6000_parse_abi_options): Add
+        -mabi=no-altivec
+        (alt_reg_names): Remove % for vrsave.
+
 2002-03-06  Jeffrey A Law  (law@redhat.com)
 
 	* ssa-ccp.c (ssa_fast_dce): Update the DF def-use chains
