--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-07  Richard Earnshaw  <rearnsha@arm.com>
+
+	* gcc.c-torture/execute/20020307-1.c: New test.
+
 2002-03-05  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/20020304-1.c: New test.
