* combine.c (simplify_comparison): If simplifying a logical shift right and compare with constant, force the comparison to unsigned.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50400 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-07  Richard Earnshaw  <rearnsha@arm.com>
+
+	* combine.c (simplify_comparison): If simplifying a logical shift
+	right and compare with constant, force the comparison to unsigned.
+
 2002-03-07  Aldy Hernandez  <aldyh@redhat.com>
 
         * doc/invoke.texi: Add documentation for -mabi=no-altivec.
