* gcc.dg/unordered-1.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50402 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-07  Richard Sandiford  <rsandifo@redhat.com>
+
+	* gcc.dg/unordered-1.c: New test.
+
 2002-03-07  Richard Earnshaw  <rearnsha@arm.com>
 
 	* gcc.c-torture/execute/20020307-1.c: New test.
