--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar  7 10:05:31 2002  Jeffrey A Law  (law@redhat.com)
+
+	* g77.f-torture/compile/20020307-1.f: New test.
+
 2002-03-07  Richard Sandiford  <rsandifo@redhat.com>
 
 	* gcc.dg/unordered-1.c: New test.
