2002-03-07  H.J. Lu  (hjl@gnu.org)
	* configure.in: Enable gprof for mips*-*-linux*.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50410 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-07  H.J. Lu  (hjl@gnu.org)
+
+	* configure.in: Enable gprof for mips*-*-linux*.
+
 2002-03-05  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* MAINTAINERS (Write After Approval): Add myself.
