* java/Make-lang.in (JAVA_TARGET_INSTALL_NAME): Define. 	(java.install-common): Link native driver to 	JAVA_TARGET_INSTALL_NAME.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50411 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-07  Jeff Sturm  <jsturm@one-point.com>
+
+	* java/Make-lang.in (JAVA_TARGET_INSTALL_NAME): Define.
+	(java.install-common): Link native driver to
+	JAVA_TARGET_INSTALL_NAME.
+
 2002-03-05  David Billinghurst <David.Billinghurst@riotinto.com>
 
 	* builtins.c(cos_builtin): method_return_type ATTRIBUTE_UNUSED
