2002-03-07  Adam Megacz  <adam@xwt.org>
        * win32.cc (_Jv_platform_gettimeofday): Now takes no args,
        returns jlong. Added implementation
        * posix.cc (_Jv_platform_gettimeofday): Now takes no args,
        returns jlong.
        * win32.h (_Jv_platform_gettimeofday): Now takes no args,
        returns jlong.
        * posix.h (_Jv_platform_gettimeofday): Now takes no args,
        returns jlong.
        * java/lang/natSystem.cc (currentTimeMillis): Now uses updated
        _Jv_platform_gettimeofday signature.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50416 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,16 @@
+2002-03-07  Adam Megacz  <adam@xwt.org>
+
+        * win32.cc (_Jv_platform_gettimeofday): Now takes no args,
+        returns jlong. Added implementation
+        * posix.cc (_Jv_platform_gettimeofday): Now takes no args,
+        returns jlong.
+        * win32.h (_Jv_platform_gettimeofday): Now takes no args,
+        returns jlong.
+        * posix.h (_Jv_platform_gettimeofday): Now takes no args,
+        returns jlong.
+        * java/lang/natSystem.cc (currentTimeMillis): Now uses updated
+        _Jv_platform_gettimeofday signature.
+	
 2002-03-07  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	* java/net/natPlainSocketImpl.cc (_Jv_recv): Removed.
