--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,12 @@
 2002-03-07  Adam Megacz  <adam@xwt.org>
 
+        * java/net/natPlainSocketImpl.cc: Changed USE_WINSOCK to
+        WIN32, and added thunks for read(), write(), and close().
+        * java/net/natPlainSocketImpl.cc (accept, read, read):
+        Disabled timeouts on WIN32 pending discussion.
+
+2002-03-07  Adam Megacz  <adam@xwt.org>
+
         * win32.cc (_Jv_platform_gettimeofday): Now takes no args,
         returns jlong. Added implementation
         * posix.cc (_Jv_platform_gettimeofday): Now takes no args,
