--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-08  Alexandre Oliva  <aoliva@redhat.com>
+
+	* config/mips/mips.h (SUBTARGET_CPP_SIZE_SPEC): Simplify.
+
 2002-03-07  Alexandre Oliva  <aoliva@redhat.com>
 
 	* config/fp-bit.c (_unord_f2): Compile it in even if
