PR c/3711 	* builtins.c (std_expand_builtin_va_arg): Do all computations on 	trees.
	* gcc.c-torture/execute/20020307-2.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50436 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-08  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/3711
+	* builtins.c (std_expand_builtin_va_arg): Do all computations on
+	trees.
+
 Fri Mar  8 06:48:45 2002  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* rtl.c (copy_most_rtx): Move from here ...
