PR c/3711 	* builtins.c (std_expand_builtin_va_arg): Do all computations on 	trees.
	* gcc.c-torture/execute/20020307-2.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50438 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-08  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/execute/20020307-2.c: New test.
+
 Thu Mar  7 10:05:31 2002  Jeffrey A Law  (law@redhat.com)
 
 	* g77.f-torture/compile/20020307-1.f: New test.
