* posix.cc (internal_gettimeofday): New function. 	(_Jv_select): Use it.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50443 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/libjava/ChangeLog
+++ b/gcc-3_1-branch/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-08  Tom Tromey  <tromey@redhat.com>
+
+	* posix.cc (internal_gettimeofday): New function.
+	(_Jv_select): Use it.
+
 2002-03-07  Adam Megacz  <adam@xwt.org>
 
 	* java/lang/natSystem.cc (currentTimeMillis): Now uses updated
