--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-08  Craig Rodrigues  <rodrigc@gcc.gnu.org>
+ 
+	* doc/install.texi (--with-libiconv-prefix): Document.
+
 2002-03-08  Michael Y. Brukman  <myb2@cornell.edu>
 
 	* doc/sourcebuild.texi: Fix typo.
