2002-03-08  Phil Edwards  <pme@gcc.gnu.org>
	PR libstdc++/5734
	* include/bits/stl_vector.h (vector::push_back()):  Guard with
	_GLIBCPP_DEPRECATED.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50448 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/libstdc++-v3/ChangeLog
+++ b/gcc-3_1-branch/libstdc++-v3/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-08  Phil Edwards  <pme@gcc.gnu.org>
+
+	PR libstdc++/5734
+	* include/bits/stl_vector.h (vector::push_back()):  Guard with
+	_GLIBCPP_DEPRECATED.
+
 2002-03-05  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* docs/html/17_intro/RELEASE-NOTES: Fix usage.
