* gcse.c (insert_insn_end_bb): Fix typo in last change.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50453 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-08  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* gcse.c (insert_insn_end_bb): Fix typo in last change.
+
 Fri Mar  8 21:08:52 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* recog.c (peephole2_optimize): Re-distribute EH edges.
