--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,11 @@
+2002-03-08  Per Bothner  <per@bothner.com>
+
+	Fix for PR java/5812.
+	* expr.c (build_java_jsr):  Take pc arguments, and do lookup_label
+	gere instead of in JSR macro.  Likewise with load_type_state call.
+	Do the latter on if the return_pc has been verified (the jsr returns).
+	(JSR):  No just call build_java_jsr.
+
 2002-03-07  Jeff Sturm  <jsturm@one-point.com>
 
 	* java/Make-lang.in (JAVA_TARGET_INSTALL_NAME): Define.
