--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,9 @@
 2002-03-08  Tom Tromey  <tromey@redhat.com>
 
+	* include/jni.h: Include stdio.h.
+
+2002-03-08  Tom Tromey  <tromey@redhat.com>
+
 	* posix.cc (internal_gettimeofday): New function.
 	(_Jv_select): Use it.
 
