--- a/gcc-3_1-branch/gcc/cp/ChangeLog
+++ b/gcc-3_1-branch/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-08  Craig Rodrigues  <rodrigc@gcc.gnu.org>
+ 
+	* cp-tree.h (CLEAR_BINFO_MARKED): Make both parts of
+	conditional return void.
+
 2002-03-02  Nathan Sidwell  <nathan@codesourcery.com>
 
 	PR c++/775
