--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-09  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* posix.cc (_Jv_platform_gettimeofday): Make sure result doesn't get
+	truncated to int.
+
 2002-03-08  Tom Tromey  <tromey@redhat.com>
 
 	* include/jni.h: Include stdio.h.
